<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021.  Hurricane Development Studios
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_download_videos"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/share_the_video_to_aio_video_downloader_app_or"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/simply_copy_the_link_of_any_video"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/download"
        android:text="GOT IT"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
