<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_margin="5dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/videoImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image"
                android:src="@drawable/test"
                app:shapeAppearanceOverlay="@style/curved" />
            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="5dp"
                android:text="@string/duration"
                android:textSize="8sp"
                android:background="@drawable/duration_bg"
                android:textColor="@color/white" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/videoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:paddingHorizontal="5dp"
                android:text="555\nuuuu"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/folderName"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:text="@string/folder_name"
                android:textColor="#FF9140" />

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>